fix: preparando projeto para produção

--- a/MTServerApi/appsettings.json
+++ b/MTServerApi/appsettings.json
@@ -13,29 +13,8 @@
       "sslPort": 44346
     }
   },
-  "Serilog": {
-    "using": [ "Serilog.Sinks.File" ],
-    "Minimumlevel": {
-      "Default": "Information"
-    },
-    "WriteTo": [{
-        "Name": "File",
-        "Args": {
-          "Path": "C:\\Microton\\mtserver-api\\logs\\api.log",
-          "rollingInterval": "Day",
-          "outputTemplate":  "[{Timestamp:dd-MM-yy HH:mm:ss zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}]"
-        }
-      }]
-  },
   "AllowedHosts": "*",
   "JwtSecretKey": "ThisismySecretKey",
-  "ConnectionString": "server=192.168.0.105;user=root;password=password;database=fal",
+  "ConnectionString": "Server=localhost;user=root;password=password;database=fal",
   "ApplicationUrl": "http://0.0.0.0:5000"
 }
-
-
-//<OutputType>Exe</OutputType>
-//    <PublishSingleFile Condition="'$(Configuration)' == 'Release'">true</PublishSingleFile>
-//    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-//    <PlatformTarget>x64</PlatformTarget>
-//    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
