fix: ajuste do gerenciamento de base

--- a/MTServerApi/appsettings.json
+++ b/MTServerApi/appsettings.json
@@ -15,6 +15,6 @@
   },
   "AllowedHosts": "*",
   "JwtSecretKey": "ThisismySecretKey",
-  "ConnectionString": "Server=localhost;user=root;password=password;database=fal",
+  "ConnectionString": "Server=;user=;password=;database=",
   "ApplicationUrl": "http://0.0.0.0:5000"
 }
