--- a/MTServerApi/appsettings.json
+++ b/MTServerApi/appsettings.json
@@ -15,6 +15,6 @@
   },
   "AllowedHosts": "*",
   "JwtSecretKey": "ThisismySecretKey",
-  "ConnectionString": "Server=;user=;password=;database=",
+  "ConnectionString": "Server=sql10.freemysqlhosting.net;user=sql10633823;password=jAW65Zudk3;database=sql10633823",
   "ApplicationUrl": "http://0.0.0.0:5000"
 }
